Añade configuración de tests